fix(auth): persist JWT token in AsyncStorage and prevent variable shadowing in AuthContext.

--- a/Frontend/SGH-Movil/app.json
+++ b/Frontend/SGH-Movil/app.json
@@ -16,7 +16,8 @@
         "backgroundColor": "#E6F4FE"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.SGHMovil"
     },
     "web": {
       "output": "static",
