--- a/Frontend/frontend_Web/package.json
+++ b/Frontend/frontend_Web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "react": "19.1.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
