--- a/Frontend/SGH-Movil/tsconfig.json
+++ b/Frontend/SGH-Movil/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "lib": ["esnext"],
+    "lib": ["esnext", "dom"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-native",
-    "types": [],
+    "types": ["jest"],
     "paths": {
       "@/*": ["./*"]
     }
